# gossip

./: README.md  dev.sh  instructions.md
apps/backend/: .coverage  .gitignore  README.md  main.py  pyproject.toml
apps/backend/src/: .env.example  article.py  embed.py  linkup_collector.py  logger.py  qdrant_client.py  rag.py  rss_collector.py
apps/backend/tests/: conftest.py  test_api.py  test_article.py  test_rss_collector.py
apps/frontend/: README.md  next.config.ts  package-lock.json  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/api/articles/: route.ts
apps/frontend/app/api/chat/: route.ts
